# VGE-Editor-UI

./: .gitignore  CMakeLists.txt  PROJECT_SETUP.md  README.md  UI.Build.cs  UI.sln  UI.vcxproj
.github/: project-board.md
.github/ISSUE_TEMPLATE/: bug_report.yml  discussion.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  project-automation.yml
Docs/: ARCHITECTURE.md  ARCHITECTURE_DETAILED.md  README.md  ROADMAP.md  TextureImplementation.md  VersaUI.md  VersaUI_Complete_Documentation.md  VersaUI_Development_Roadmap.md  VersaUI_Editor_Components.md  VersaUI_Engine_Integration_Notes.md  VersaUI_Modern_Features_Roadmap.md  VersaUI_Rendering_System.md  VersaUI_Slate_Architecture.md  WHY_CUSTOM_UI.md
Docs/components/: widgets.md
Docs/guidelines/: development.md
Resources/Shaders/: UI.frag  UI.vert
Source/Editor/VersaEditor/Private/: AboutDialog.cpp  AssetBrowserPanel.cpp  ConsolePanel.cpp  EditorLayer.cpp  EditorLayout.cpp  EditorPanel.cpp  EditorUI.cpp  GameViewPanel.cpp  PropertiesPanel.cpp  SceneHierarchyPanel.cpp  ViewportPanel.cpp
Source/Launch/Private/: main.cpp
Source/Runtime/Core/Private/: Application.cpp  Window.cpp
Source/Runtime/Core/Private/Core/: UICore.cpp
Source/Runtime/Core/Private/Effects/: UIGlassEffect.cpp  UIGlowEffect.cpp
Source/Runtime/Core/Private/Input/: UIInput.cpp
Source/Runtime/Core/Private/Layout/: UIHorizontalLayout.cpp  UILayoutManager.cpp  UILayoutPresetManager.cpp  UIVerticalLayout.cpp
Source/Runtime/Core/Private/Platform/: UIPlatform.cpp  UIWindow.cpp
Source/Runtime/Core/Private/Renderer/: FontRenderer.cpp  Shader.cpp  ShaderSources.cpp  UIBuffer.cpp  UIFontRenderer.cpp  UIIndexBuffer.cpp  UIRenderContext.cpp  UIRenderPrimitives.cpp  UIRenderTarget.cpp  UIRenderer.cpp  UIShader.cpp  UIShaderManager.cpp  UIStbImage.cpp  UITexture.cpp  UIVertexArray.cpp  UIVertexBuffer.cpp
Source/Runtime/Core/Private/Theme/: UIAnimatable.cpp  UIAnimation.cpp  UIAnimationClip.cpp  UIAnimationPresets.cpp  UIAnimationSequence.cpp  UIAnimationState.cpp  UIAnimationTemplates.cpp
Source/Runtime/Core/Private/Widget/: UICommandPalette.cpp  UIContainer.cpp  UIDockingManager.cpp  UIMenu.cpp  UIMenuBar.cpp  UIPropertyEditor.cpp  UIPropertyPanel.cpp  UIPropertyUndo.cpp  UIPropertyValidator.cpp  UISceneHierarchy.cpp  UISlot.cpp  UIStyle.cpp  UIWidget.cpp  UIWindowManager.cpp
Source/Runtime/Core/Private/Window/: UIWindow.cpp  UIWindowSnapping.cpp
Source/Runtime/Core/Public/Base/: VGE.h
Source/Runtime/Core/Public/Core/: Application.h  IUIRenderable.h  Logger.h  UICore.h  UIForward.h  UIObject.h  UIRenderableBase.h  UISystem.h  UITypes.h
Source/Runtime/Core/Public/Effects/: UIGlassEffect.h  UIGlowEffect.h
Source/Runtime/Core/Public/Events/: IUIEventHandler.h  UIDragDropManager.h  UIEvent.h  UIEventHandlerBase.h  UIEventManager.h  UIEvents.h  UIInputManager.h
Source/Runtime/Core/Public/Input/: UIInput.h
Source/Runtime/Core/Public/Layout/: IUILayoutable.h  UIGeometry.h  UIHorizontalLayout.h  UILayout.h  UILayoutConstraints.h  UILayoutManager.h  UILayoutPresetManager.h  UILayoutSerializer.h  UILayoutableBase.h  UIVerticalLayout.h
Source/Runtime/Core/Public/Platform/: PlatformWindow.h  UIPlatform.h  UIWindow.h  UIWindowDesc.h  UIWindowEvent.h  UIWindowManager.h  Window.h
Source/Runtime/Core/Public/Renderer/: FontRenderer.h  Renderer.h  Shader.h  ShaderSources.h  Shaders.h  UIBuffer.h  UIFont.h  UIFontRenderer.h  UIIndexBuffer.h  UIRenderContext.h  UIRenderPrimitives.h  UIRenderTarget.h  UIRenderer.h  UIShader.h  UIShaderDataType.h  UIShaderManager.h  UIShaderSources.h  UIShaderTypes.h  UITexture.h  UIVertexArray.h  UIVertexBuffer.h
Source/Runtime/Core/Public/Theme/: UIAnimatable.h  UIAnimation.h  UIAnimationPresets.h  UIAnimationSequence.h  UIAnimationState.h  UITheme.h
Source/Runtime/Core/Public/Utils/: RobotoRegular.h  ShaderSources.h  ShaderUtils.h
Source/Runtime/Core/Public/Widget/: UICommandPalette.h  UIContainer.h  UIDialog.h  UIDockSpace.h  UIDockingManager.h  UIDockingSystem.h  UIElement.h  UILayoutConstraints.h  UIMenu.h  UIMenuBar.h  UIPropertyEditor.h  UIPropertyEditors.h  UIPropertyPanel.h  UIPropertyUndo.h  UIPropertyValidator.h  UISceneHierarchy.h  UISlot.h  UIStyle.h  UIWidget.h  UIWindowManager.h
Source/Runtime/Core/Public/Window/: UIWindow.h  UIWindowSnapping.h  Window.h
Source/Runtime/Framework/Private/Layout/: UIDockSpace.cpp  UILayout.cpp
Source/Runtime/Framework/Private/Rendering/: FontRenderer.cpp  Renderer.cpp  ShaderSources.cpp
Source/Runtime/Framework/Public/Layout/: UIDockSpace.h  UILayout.h
Source/Runtime/Framework/Public/Rendering/: FontRenderer.h  Renderer.h  UIFont.h  UIRenderer.h  UIShader.h  UITextRenderer.h  UITexture.h
Source/Runtime/UI/Private/: Layout_1  UIDialog.cpp  UIElement.cpp  UIEventManager.cpp  UIObject.cpp  UIRenderer.cpp  UITheme.cpp  UITypes.cpp  UIWidget.cpp
Source/Runtime/UI/Private/Controls/: UIButton.cpp  UIColorPicker.cpp  UIComboBox.cpp  UIComboBoxAnimation.cpp  UIComboBoxAnimator.cpp  UIComboBoxBase.cpp  UIComboBoxKeyboard.cpp  UIComboBoxRenderer.cpp  UICommandPalette.cpp  UIDialog.cpp  UIDropdown.cpp  UIMenu.cpp  UIMenuBar.cpp  UIPanel.cpp  UIScrollView.cpp  UISlider.cpp  UITabControl.cpp  UITabManager.cpp  UIText.cpp  UITextInput.cpp  UIToolbar.cpp  UITreeView.cpp  UIWindow.cpp
Source/Runtime/UI/Private/Docking/: UIDockPreview.cpp  UIDockSpace.cpp  UIDockingManager.cpp
Source/Runtime/UI/Private/Layout/: UILayoutSerializer.cpp
Source/Runtime/UI/Private/Property/: UIPropertyBinding.cpp  UIPropertyEditors.cpp  UIPropertyExpression.cpp  (+4 more)
Tests/Controls/SceneHierarchy/: UISceneHierarchyTest.cpp
Tests/Core/PropertyBinding/: UICollectionBindingTest.cpp  UIPropertyBindingTest.cpp  UIPropertyExpressionTest.cpp
Tests/Core/PropertyPanel/: UIPropertyPanelTest.cpp
Tools/: build_freetype.ps1  create_font.cpp  download_dependencies.ps1  download_font.ps1  fix_includes.ps1  reorganize.ps1  setup_glad.ps1  update_includes.ps1
scripts/: setup-dev.ps1
(+52 files in other folders)
